--- a/index.html
+++ b/index.html
@@ -1,16 +1,5 @@
+<script src="./immutable.js"></script>
 <script>
-const immutable = {
-  push (state, data) {
-    return typeof(data) === 'string' ? [...state, data] : [...state].concat(data)
-  },
-  delete (state, id) {
-    return state.filter(item => item.id !== id)
-  },
-  update (state, data) {
-    return state.map(item => item.id !== data.id ? item : data )
-  }
-}
-
 let test = [
   { id: 1, name: 'vuejs' },
   { id: 2, name: 'angular' }
